# articular

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  debug.xml  example.md  model.md  pyproject.toml  setup.py  specification.md
articular/: __init__.py  articular.json  articular.py  articulate.py  cli.py  defaults.json  document.py  fix_relative_uris.py  models.py  template.py
articular/templates/: html_to_xml.xsl
articular/visualise/: documents.dot  documents.html  documents_design.dot  documents_design_both.dot  documents_overview.dot  example.dot  knowledge-jld.dot  knowledge.py  knowledge.trig  knowledge_overview.dot  out.xml  the-big-sleep.dot  visualisation_sample.puml  viz.py  whaam.dot
articular/xsl/: a.xsl  blockquote.xsl  context.xsl  dl.xsl  document.xsl  h1.xsl  identifier.xsl  img.xsl  label.xsl  li.xsl  ol.xsl  p.xsl  table.xsl  ul.xsl
code/: articulate.py  models.py
docs/: URIs.md  getting_started.md  model.md  specification.md
documents/Events/: great-fire-of-london.md
documents/Groups/: rijksmuseum.md  tate_modern.md
documents/People/: carol-reed.md  frida-kahlo.md  roy_lichtenstein.md
documents/Physical Objects/: I Can See the Whole Room...and There's Nobody in It!.md  great-fire-of-london.md  liquid-crystal-environment.md  whaam.md  whaam2.md
documents/Visual Works/: I Can See the Whole Room and Nobody's in it!.md
examples/: adventures_of_huckleberry_finn.json  adventures_of_huckleberry_finn.md  adventures_of_huckleberry_finn.trig  adventures_of_huckleberry_finn.ttl  mona_lisa.md  the-beatles.md  the-big-sleep.md  tortilla-flat.md
examples/features/: definition_list.md  glossary.md  mutliline_text.md  ordered_list.md  structure.md  table.md  terms.md  (+3 more)
krml/: __init__.py  cli.py  document.py  krml.py
tests/: integration.md  test_specification.py  test_transformations.py  test_xslt.py  tests.md  tests.py
(+45 files in other folders)
