[build-system]
requires = ["setuptools >= 66.0.0"]
build-backend = "setuptools.build_meta"

[project]
version = "2.14.1"
name = "Articular"
description = "Create RDF knowledge graphs with Markdown."
keywords = [
    "Knowledge graphs",
    "Markdown",
    "RDF"
]
readme = 'README.md'
urls = { project-url = "https://github.com/edwardanderson/articular" }
dependencies = [
    "lxml",
    "markdown-it-py[plugins]",
    "python-frontmatter",
    "rdflib",
    "rich",
    "typer",
    "saxonche"
]

[tool.setuptools.packages.find]

[project.scripts]
articular = "articular.cli:app"
